--- a/.gitignore
+++ b/.gitignore
@@ -5,31 +5,31 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle
+**/.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-*
+**/db/*.sqlite3
+**/db/*.sqlite3-*
 
 # Ignore all logfiles and tempfiles.
-/log/*
+**/log/*
 **/tmp/*
-!/log/.keep
-!/tmp/.keep
+!**/log/.keep
+!**/tmp/.keep
 
 # Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
+**/tmp/pids/*
+!**/tmp/pids/
+!**/tmp/pids/.keep
 
 # Ignore uploaded files in development.
-/storage/*
-!/storage/.keep
-/tmp/storage/*
-!/tmp/storage/
-!/tmp/storage/.keep
+**/storage/*
+!**/storage/.keep
+**/tmp/storage/*
+!**/tmp/storage/
+!**/tmp/storage/.keep
 
-/public/assets
+**/public/assets
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+**/config/master.key
