--- a/lesson-3-continuous-integration/exercises/ror-ci/solution/ror-ci.yaml
+++ b/lesson-3-continuous-integration/exercises/ror-ci/solution/ror-ci.yaml
@@ -6,15 +6,15 @@ on:
       - main
 
 env:
-  RUBY_VERSION: 3.0.0
-
+  RUBY_VERSION: 3.1.1
+  WORKING_DIR: lesson-3-continuous-integration/exercises/ror-ci/starter/udacity-blog
 jobs:
-  build:
+  lint:
+    name: Run linter
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: lesson-3-continuous-integration/exercises/ror-ci/starter/udacity-blog
-
+        working-directory: ${{ env.WORKING_DIR }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -23,6 +23,32 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
+          bundler-cache: true
+
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
+
+      - name: Run linter
+        run: |
+          bundle exec rails test
+
+  test:
+    name: Run test
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ env.WORKING_DIR }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+          bundler-cache: true
 
       - name: Install dependencies
         run: |
