use rubocop command

--- a/.github/workflows/ror-ci.yaml
+++ b/.github/workflows/ror-ci.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run linter
         run: |
-          bundle exec rails test
+          rubocop
 
   test:
     name: Run test
