--- a/lesson-3-continuous-integration/exercises/ror-ci/solution/ror-ci.yaml
+++ b/lesson-3-continuous-integration/exercises/ror-ci/solution/ror-ci.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run linter
         run: |
-          bundle exec rails test
+          rubocop
 
   test:
     name: Run test
